[gd_scene load_steps=14 format=3 uid="uid://cfytv6wnnrufh"]

[ext_resource type="Script" uid="uid://dtul1mk8xodr0" path="res://scripts/menus/main_menu.gd" id="1_ng0o5"]
[ext_resource type="AudioStream" uid="uid://57fqemeq825r" path="res://assets/audio/sfx/157539__nenadsimic__click.wav" id="2_8r73w"]
[ext_resource type="AudioStream" uid="uid://by2jd1ly47ywq" path="res://assets/audio/sfx/268108__nenadsimic__button-tick.wav" id="3_1hnlc"]
[ext_resource type="Material" uid="uid://cf2g5d07kmao" path="res://assets/materials/testing_color.tres" id="4_50h1w"]
[ext_resource type="Script" uid="uid://chlir5gpjwmsn" path="res://scripts/menus/main_menu_camera.gd" id="5_euy4r"]
[ext_resource type="PackedScene" uid="uid://di8twtyc507sv" path="res://scenes/menus/options_menu.tscn" id="6_bre17"]
[ext_resource type="PackedScene" uid="uid://d16myeekw8e2" path="res://scenes/menus/level_selector.tscn" id="7_8r73w"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_l6cm7"]

[sub_resource type="Sky" id="Sky_8o5xr"]
sky_material = SubResource("ProceduralSkyMaterial_l6cm7")

[sub_resource type="Environment" id="Environment_ekxnf"]
background_mode = 2
sky = SubResource("Sky_8o5xr")
ambient_light_color = Color(0.76662, 0.76662, 0.76662, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_bqqt6"]
size = Vector2(100, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wu84c"]
albedo_color = Color(0.337255, 0.490196, 0.27451, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8ln24"]
size = Vector3(5, 15, 5)

[node name="Main_Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ng0o5")
sfx_hover = ExtResource("2_8r73w")
sfx_click = ExtResource("3_1hnlc")

[node name="Background" type="Node3D" parent="."]

[node name="LevelBackground" type="Node3D" parent="Background"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Background/LevelBackground"]
transform = Transform3D(0.939693, -0.219846, 0.262002, -0.201411, 0.263429, 0.943419, -0.276426, -0.939294, 0.203262, -0.964247, 16.8921, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background/LevelBackground"]
environment = SubResource("Environment_ekxnf")

[node name="Ground" type="StaticBody3D" parent="Background/LevelBackground"]
collision_layer = 3
collision_mask = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="Background/LevelBackground/Ground"]
mesh = SubResource("PlaneMesh_bqqt6")
surface_material_override/0 = SubResource("StandardMaterial3D_wu84c")

[node name="StaticBody3D" type="StaticBody3D" parent="Background/LevelBackground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5, 7.5, -29.9)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Background/LevelBackground/StaticBody3D"]
material_override = ExtResource("4_50h1w")
mesh = SubResource("BoxMesh_8ln24")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.179036, 0.303794, -0.935764, -0.00834, 0.95063, 0.310216, 0.983808, 0.0633443, -0.167663, 0, 8.78714, 0)
script = ExtResource("5_euy4r")

[node name="MenuPanel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 165
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Mandira"

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_constants/separation = 25

[node name="Start" type="Button" parent="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Options" type="Button" parent="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="Quit" type="Button" parent="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="options_menu" parent="." instance=ExtResource("6_bre17")]
visible = false

[node name="level_selector" parent="." instance=ExtResource("7_8r73w")]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
